--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "child_process": "^1.0.2",
+    "crypto": "^1.0.1",
+    "http": "^0.0.0",
     "nodemailer": "^6.3.0"
   }
 }
